<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/qa_layer_list_draft_dialog_background">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/qa_tv_reply_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/qa_quiz_dialog_exit_text"
        android:textColor="@color/qa_draft_dialog_text_color"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/qa_draft_dialog_divide_color"
        app:layout_constraintBottom_toBottomOf="@+id/tv_save"
        app:layout_constraintTop_toTopOf="@+id/qa_tv_reply_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/qa_common_dialog_exit"
        android:textColor="@color/qa_draft_dialog_text_color"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/qa_tv_reply_content"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/qa_draft_dialog_divide_color"
        app:layout_constraintBottom_toBottomOf="@+id/tv_no_save"
        app:layout_constraintTop_toTopOf="@+id/tv_save" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_no_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/qa_draft_dialog_no_save"
        android:textColor="@color/qa_draft_dialog_text_color"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_save"
        tools:layout_editor_absoluteX="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/qa_draft_dialog_divide_color"
        app:layout_constraintBottom_toBottomOf="@+id/tv_no_save"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_save" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/qa_draft_dialog_cancel"
        android:textColor="@color/qa_draft_dialog_text_color"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_save"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
