<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/qa_layer_list_draft_dialog_background">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/qa_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/qa_dialog_share_text"
        android:textColor="@color/qa_draft_dialog_text_color"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/qa_draft_dialog_divide_color"
        app:layout_constraintTop_toBottomOf="@+id/qa_tv_title" />

    <LinearLayout
        android:id="@+id/qa_ll_share_ivs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="24dp"
        android:paddingBottom="17dp"
        app:layout_constraintTop_toBottomOf="@+id/qa_tv_title">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/qa_ll_share_qq_zone"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/qa_ic_qqzone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/qa_dialog_share_qqzone"
                android:textColor="@color/qa_draft_dialog_text_color"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/qa_ll_share_friend_circle"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/qa_ic_friend_circle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/qa_dialog_share_friend_circle"
                android:textColor="@color/qa_draft_dialog_text_color"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/qa_ll_share_qq"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/qa_ic_qq" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/qa_dialog_share_qq"
                android:textColor="@color/qa_draft_dialog_text_color"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/qa_ll_share_wechat"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/qa_ic_wechat" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/qa_dialog_share_wechat_friend"
                android:textColor="@color/qa_draft_dialog_text_color"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/qa_ll_share_copy_link"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/qa_ic_cv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/qa_dialog_share_copy_link"
                android:textColor="@color/qa_draft_dialog_text_color"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/qa_draft_dialog_divide_color"
        app:layout_constraintTop_toBottomOf="@+id/qa_ll_share_ivs" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/qa_tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:text="@string/qa_dialog_cancel"
        android:textColor="@color/qa_dialog_share_cancel_text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qa_ll_share_ivs"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
