<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:background="@drawable/qa_shape_dialog_tip_background"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/qa_et_report"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/qa_shape_reply_edittext_background"
        android:gravity="top|left"
        android:hint="@string/qa_report_hint_text"
        android:imeOptions="actionSearch"
        android:inputType="textMultiLine"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@color/qa_dialog_top_report_et_text_color"
        android:textColorHint="@color/qa_common_hint_text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/qa_view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qa_view" />

    <TextView
        android:id="@+id/qa_tv_tip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="76dp"
        android:gravity="center_horizontal"
        android:text="@string/qa_dialog_tip_report_text"
        android:textColor="@color/qa_dialog_tip_text_color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/qa_tv_tip_deny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="27dp"
        android:gravity="center"
        android:background="@drawable/qa_shape_dialog_tip_deny"
        android:text="@string/qa_dialog_tip_deny_text"
        android:textColor="@color/qa_dialog_report_cancel_text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/qa_tv_tip_positive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qa_view2" />

    <TextView
        android:id="@+id/qa_tv_tip_positive"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/qa_shape_dialog_tip_positive"
        android:text="@string/qa_dialog_tip_positive_text"
        android:textColor="@color/map_dialog_tip_positive_text_color"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/qa_tv_tip_deny"
        app:layout_constraintTop_toBottomOf="@+id/qa_view2" />

    <View
        android:id="@+id/qa_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="21dp"
        android:background="@color/qa_dialog_tip_div_view_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qa_tv_tip_text" />

    <View
        android:id="@+id/qa_view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="182dp"
        android:background="@color/qa_dialog_tip_div_view_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qa_view" />

</androidx.constraintlayout.widget.ConstraintLayout>